# tsos-nucleus

./: .clang-format  .gitignore  .gitmodules  .gitpod.yml  CMakeLists.txt  Dockerfile  LICENSE  Makefile.dmg  Makefile.dmg.mk  Makefile.gba  Makefile.gba.mk  Makefile.nspire.mk  Makefile.pc  Makefile.pc.mk  Makefile.psx.mk  Makefile.rpi3.mk  README.md  build.py  build.sh  clang-format.sh  codeship-services.yml  codeship-steps.yml  rename.sh  tsos.cfg
.circleci/: config.yml
.github/: loc.yml
.github/workflows/: LoC.yml  build.yml  c-cpp.yml  codeql-analysis.yml  compile-and-release.yml  compile-canon-a1100.yml  compile-cubieboard1.yml  compile-gba.yml  compile-nspire-cx.yml  compile-nspire.yml  compile-pc.yml  compile-rpi3.yml  compile-test.yml  docker-image.yml  line-count.yml  loc.yml  main.yml  test-pull-request.yml
asm/gba/: crt0.S  gba_boot.S
asm/nspire/: crt0.S  nspire_boot.S
asm/pc/: crt0.S  crtn.S  grub2.S  idt.S
asm/psx/: psx_boot.S
asm/rpi3/: crt0.S  rpi3_boot.S
bootloader/gba/: gba_boot.asm
buildscripts/: deploy_canon-a1100.py  deploy_gba-rom.py  deploy_gba.py  deploy_grub-iso.py  deploy_nspire-cx.py  deploy_nspire-partition.py  deploy_nspire.py  deploy_pc.py  deploy_rpi3.py  deploy_vexpress-a15.py
cfg/: build.json  deploy_config.json  system_config.json
config/: SYSTEM.CNF  directory_structure.json  dmg.hpp  gba.hpp  generic.hpp  grub.cfg  grub2.cfg  nspire.hpp  pc.hpp  psx.hpp  system_config.json
documents/: Boot Process.md  Boot-Process.md  Building TSOS.md  Building-TSOS.md  Code-From-Other-Codebase.md  Filesystem Structure.md  Filesystem-Structure.md  Materials-Used.md  Obvious Problems.md  Obvious-Problems.md  TSOS Ports.md  TSOS Syscalls.md  TSOS-Ports.md  TSOS-Syscalls.md
include/: IDT.hpp  at_keyboard.hpp  boot_driver.hpp  boot_module.hpp  cd.hpp  cga.hpp  core.hpp  current_config.hpp  disk_driver.hpp  disk_module.hpp  driver.hpp  ega.hpp  elf.hpp  fat12.hpp  fat16.hpp  fat32.hpp  filesystem_driver.hpp  filesystem_file.hpp  filesystem_module.hpp  filesystem_permissions.hpp  gba_boot.hpp  gba_cartridge.hpp  gba_gamepad.hpp  gba_io_port.hpp  gba_screen.hpp  gba_sound.hpp  gdt.h  gdt.hpp  grub2.hpp  handlers.hpp  icxxabi.hpp  idt.hpp  input_driver.hpp  input_key_identifier.hpp  input_module.hpp  io.hpp  mda.hpp  module.hpp  mouse.hpp  nucleus_instance.hpp  (+30 more)
include/canon-a1100/: canon-a1100_boot.hpp  canon-a1100_keypad.hpp  canon-a1100_screen.hpp  canon-a1100_sd_card.hpp  canon-a1100_sound.hpp  canon-a1100_uart.hpp
include/gba/: gba_boot.hpp  gba_cartridge.hpp  gba_gamepad.hpp  gba_io_port.hpp  gba_screen.hpp  gba_sound.hpp
include/generic/: array.hpp  boot_driver.hpp  boot_module.hpp  boot_nucleon.hpp  boot_quark.hpp  core.hpp  current_config.hpp  cxxabi.hpp  default_font.hpp  disk_driver.hpp  disk_module.hpp  disk_nucleon.hpp  disk_quark.hpp  driver.hpp  elf.hpp  ext2.hpp  fat12.hpp  fat16.hpp  fat32.hpp  filesystem_driver.hpp  filesystem_file.hpp  filesystem_module.hpp  filesystem_nucleon.hpp  filesystem_permissions.hpp  filesystem_quark.hpp  icxxabi.hpp  input_driver.hpp  input_key_identifier.hpp  input_module.hpp  input_nucleon.hpp  input_quark.hpp  interrupt_nucleon.hpp  interrupt_quark.hpp  io_driver.hpp  io_module.hpp  io_nucleon.hpp  io_quark.hpp  kernel_main.hpp  memory_nucleon.hpp  memory_quark.hpp  (+34 more)
include/nspire/: nspire-cm_boot.hpp  nspire-cm_disk.hpp  nspire-cm_keyboard.hpp  nspire-cm_screen.hpp  nspire-cm_sound.hpp  nspire-cm_uart.hpp  nspire-cx_boot.hpp  nspire-cx_disk.hpp  nspire-cx_keyboard.hpp  nspire-cx_screen.hpp  nspire-cx_sound.hpp  nspire-cx_uart.hpp
include/nspire-cx/: nspire-cx_boot.hpp  nspire-cx_sound.hpp  nspire-cx_uart.hpp
include/pc/: at_keyboard.hpp  atapi.hpp  cga.hpp  cmos.hpp  ega.hpp  gdt.hpp  grub2.hpp  idt.hpp  mda.hpp  multiboot.hpp  pc_io.hpp  pc_mem.hpp  pc_speaker.hpp  pc_uart.hpp  rs232.hpp  vga.hpp  xt_keyboard.hpp
include/rpi3/: rpi3_boot.hpp  rpi3_io.hpp  rpi3_keyboard.hpp  rpi3_screen.hpp  rpi3_sd_card.hpp  rpi3_sound.hpp  rpi3_time.hpp  rpi3_uart.hpp
include/vexpress-a15/: vexpress-a15_boot.hpp  vexpress-a15_io.hpp  vexpress-a15_keyboard.hpp  vexpress-a15_screen.hpp  vexpress-a15_sound.hpp  vexpress-a15_uart.hpp
klibc/arm/: __aeabi_idiv.c  __aeabi_idivmod.s  __aeabi_uidivmod.s
lib/arm/: __aeabi_atexit.c  __aeabi_idiv.c  __aeabi_idivmod.s  __aeabi_memclr.c  __aeabi_memclr4.c  __aeabi_memclr8.c  __aeabi_memcpy.c  __aeabi_memmove.c  __aeabi_memmove4.c  __aeabi_memmove8.c  __aeabi_memset.c  __aeabi_uidiv.c  __aeabi_uidivmod.s  __udivmodsi4.c  __udivsi3.c
lib/generic/: abs.c  atoi.c  isdigit.c  isprint.c  isspace.c  itoa.c  memchr.c  memcmp.c  memcpy.c  memmove.c  memset.c  memshift.c  oct2bin.c  oct2int.c  strchr.c  strcmp.c  strlen.c  strnlen.c
linker-scripts/: elf-linker.ld  gba-elf.ld  gba.ld  nspire.ld  pc-elf.ld  pc.ld  psx-elf.ld  psx.ld  rpi3.ld
linkerscripts/: canon-a1100.ld  cubieboard1.ld  gba.ld  nspire.ld  pc.ld  rpi3.ld  vexpress-a15.ld
makefiles/: gba.mk  nspire.mk  pc.mk  psx.mk  rpi3.mk
misc/: SYSTEM.CNF  config.txt  grub.cfg  syslinux.cfg
misc/pc/: grub.cfg
nucleus/: Makefile.dmg  Makefile.dmg.mk  Makefile.gba  Makefile.gba.mk  Makefile.pc  Makefile.pc.mk
nucleus/core/: core.cpp  core.hpp  driver.cpp  driver.hpp  icxxabi.cpp  icxxabi.hpp  module.cpp  module.hpp  types.hpp
src/: cd.cpp  core.cpp  disk_driver.cpp  disk_module.cpp  ega.cpp  fat32.cpp  gba_boot.cpp  input_module.cpp  process_driver.cpp  process_info.cpp  rs232.cpp  serial_module.cpp  udf.cpp  video_color.cpp  video_font.cpp  xt_keyboard.cpp
src/canon-a1100/: canon-a1100_boot.cpp  canon-a1100_keypad.cpp  canon-a1100_screen.cpp  canon-a1100_sd_card.cpp  canon-a1100_sound.cpp  canon-a1100_uart.cpp
src/gba/: gba_boot.cpp  gba_cartridge.cpp  gba_gamepad.cpp  gba_io_port.cpp  gba_screen.cpp  gba_sound.cpp
src/generic/: array.cpp  boot_driver.cpp  boot_module.cpp  boot_nucleon.cpp  boot_quark.cpp  core.cpp  cxxabi.cpp  default_font.cpp  disk_driver.cpp  disk_module.cpp  disk_nucleon.cpp  disk_quark.cpp  driver.cpp  elf.cpp  ext2.cpp  fat12.cpp  fat16.cpp  fat32.cpp  filesystem_driver.cpp  (+50 more)
(+207 files in other folders)
